// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Suggester /> should render 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    class="react-autosuggest__container"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-controls="react-autowhatever-1"
      autocomplete="off"
      class="full-width"
      name="query"
      placeholder="faire une recherche."
      type="search"
      value=""
    />
    <div
      class="react-autosuggest__suggestions-container"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
</div>
`;

exports[`<Suggester /> should render suggestions 1`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    class="react-autosuggest__container react-autosuggest__container--open"
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      aria-controls="react-autowhatever-1"
      autocomplete="off"
      class="full-width"
      name="query"
      placeholder="faire une recherche."
      type="search"
      value="test"
    />
    <div
      class="react-autosuggest__suggestions-container react-autosuggest__suggestions-container--open"
      id="react-autowhatever-1"
      role="listbox"
    >
      <ul
        class="react-autosuggest__suggestions-list"
        role="listbox"
      >
        <li
          aria-selected="false"
          class="react-autosuggest__suggestion react-autosuggest__suggestion--first"
          data-suggestion-index="0"
          id="react-autowhatever-1--item-0"
          role="option"
        >
          <span>
            une suggestion
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
